# linkme-flutter-app

./: .gitattributes  .gitignore  LinkMe协同文档-前置信息.md  README.md  git_hooks.dart  pubspec.yaml
.github/workflows/: build.yml  clear-r2.yml
android/: .gitignore  build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
cmdding/cmdding/: build_android.cmd  build_android.ps1  run_build.ps1
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/constants/: app_constants.dart  privacy_constants.dart
lib/core/desktop/: window_control.dart
lib/core/native/: native_av_bridge.dart  native_codec_channel.dart
lib/core/network/: api_client.dart  api_config.dart  api_response.dart  api_response.g.dart  network_manager.dart  server_health.dart  websocket_manager.dart
lib/core/theme/: app_colors.dart  app_text_styles.dart  app_theme.dart  linkme_material.dart
lib/core/utils/: app_router.dart  custom_toast.dart  ios_style_route.dart  url_detector.dart  url_launcher_helper.dart
lib/core/webrtc/: mediasoup_client.dart  webrtc_client.dart
lib/core/widgets/: avatar_viewer.dart  custom_video_controls.dart  image_viewer.dart  unified_toast.dart  video_player_widget.dart  video_preview_widget.dart
lib/features/academy/: academy_home_screen.dart  academy_profile_screen.dart  academy_search_screen.dart
lib/features/auth/: login_screen.dart  register_screen.dart
lib/features/call/: call_screen.dart
lib/features/chat/: chat_detail_screen.dart  main_screen.dart  network_issue_page.dart
lib/features/community/: community_notifications_screen.dart
lib/features/desktop/: desktop_events.dart  desktop_main_screen.dart
lib/features/friends/: add_friend_screen.dart  friend_profile_screen.dart  friend_requests_screen.dart  friends_screen.dart
lib/features/groups/: create_group_screen.dart  group_info_screen.dart  group_list_screen.dart
lib/features/hot/: article_detail_screen.dart  hot_screen.dart  hot_search_result_screen.dart  publish_content_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
native/linkme_av_core/: CMakeLists.txt
native/linkme_av_core/include/: audio_processor.h  codec_factory.h  frame_buffer.h  hardware_accelerator.h  quality_controller.h  video_decoder.h  video_encoder.h
native/linkme_av_core/src/: audio_processor.cpp  codec_factory.cpp  frame_buffer.cpp  hardware_accelerator.cpp  jni_bridge.cpp  quality_controller.cpp  video_decoder.cpp  video_encoder.cpp
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+111 files in other folders)
